--- a/index.html
+++ b/index.html
@@ -5,62 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles/styles.css">
+
+  <link rel="stylesheet" href="styles/index.css">
   
-  <title>Frontend Mentor | Stats preview card component</title>
+  <title>Frontend Mentor | Order summary card</title>
 
 </head>
 <body>
+
   <main>
 
-    <div id="text-container">
+    <img alt="image" src="images/illustration-hero.svg" id="main-image">
 
-      <div class="text-box">
-        <h1>Get <span class="accent">insights</span> that help your business grow.
-        </h1>
+    <div id="text-box">
+
+      <h1>Order Summary
+      </h1>
+
+      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+        device anywhere you like!
+      </p>
+
+      <div id="subscription">
+        <img src="images/icon-music.svg" id="music-icon">
+        <p><span class="bold">Annual Plan</span><br>$59.99/year</p>
+        <a href="https://github.com/kenzo-wegher/" target="_blank">Change</a>
       </div>
 
-      <div class="text-box">
-        <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
-        </p>
-      </div>
+      <button id="payment">Proceed to Payment
+      </button>
 
-      <div class="text-box" id="empty-box">
-      </div>
+      <button id="cancel">Cancel Order
+      </button>
 
-      <div class="text-box" id="data-box">
-
-        <div class="data">
-          <h2>10k+
-          </h2>
-          <p>companies
-          </p>
-        </div>
-
-        <div class="data">
-          <h2>314
-          </h2>
-          <p>templates
-          </p>
-        </div>
-
-        <div class="data">
-          <h2>12M+
-          </h2>
-          <p>queries
-          </p>
-        </div>
-        
-        
-      </div>
     </div>
-
-    <div id="image-container">
-      <img id="desktop-img" src="images/image-header-desktop.jpg" alt="image">
-      <img id="mobile-img" src="images/image-header-mobile.jpg" alt="image">
-      <div id="img-overlay"></div>
-    </div>
-
   </main>
 
   <footer class="attribution">
