--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
 
       <div id="subscription">
-        <img src="images/icon-music.svg" id="music-icon">
+        <img src="images/icon-music.svg" id="music-icon" alt="">
         <p><span class="bold">Annual Plan</span><br>$59.99/year</p>
         <a href="https://github.com/kenzo-wegher/" target="_blank">Change</a>
       </div>
